
--Made playback of recorded web events more robust in the face of (admitedly
  mysterious) playback timing variations.

--Finally fixed client-side cause of dropping stuff in a bad biome.  Fixes #479

--Support for +blocksMoving tag to prevent animals from walking through
  auto-open doors.  Part of #504

--Improved spacing of speech bubbles (no more extra space at end of string).




Server Fixes

--Keeping diffWorking directory around after content build for forensic
  purposes (in case the weird Steam build bug happens again).

--Cursing by name radius is now 200 (was 32), and is a live server setting.
  Part of #496

--Server name at bottom of character detail page in family tree.

--Data-only diff bundle script has optional pause to check Steam build.

--Curse DB dump utility program prints date stamp for each entry.

--Fixed glitch in names timing out for curse purposes after someone dies.
  Fixes #511

--Fixed spurious creation of new family population logs when tutorial or cursed
  Eve picks a name.
 
--Improved reflector split/unsplit behavior in case where servers are spuriously
  offline.

--New format for links to Wondible full family tree viewer.  Fixes #509

--Added more logging around decision of when to spawn a new Eve.  Related to
  #510



Version 304   2020-January-17

--No longer playing eating animation when sticking food in clothing container.
  Fixes #490

--Fix overlap of hidden email/SteamID with GENETIC FITNESS label.  Fixes #491



Server Fixes

--Rewrote baby placement code, removing a bunch of deprecated cases.  When
  placing a player, we first find all non-curse-blocked, non-cooldown, 
  non-lineage-limit mothers, expanding to include cooldown mothers if we can't
  find any, and then expanding to include lineage limit mothers if we still 
  can't find any.  Then, from those available, we pick the mothers from the
  weakest race, and then, from those, we pick the mothers from the weakest